--- a/datausa/static/css/site.css
+++ b/datausa/static/css/site.css
@@ -4739,68 +4739,83 @@ body.redirect nav {
         padding-left: 10px !important;   }
 }
 @media only screen and (max-width : 480px) {
-  body.profile #profile-nav, body.profile #stats-bar, body.story #profile-nav,
-  body.story #stats-bar {
-    display: none;   }
-    body.profile #show-bg i, body.story #show-bg i {
-      padding: 15px 10px;   }
-      body.profile #splash, body.story #splash {
-        width: 100%;   }
-        body.profile #splash #splash-image::after, body.story #splash #splash-image::after {
-          background: -webkit-linear-gradient(top, transparent 10%, rgba(20, 27, 46, 0.7) 60%,
-                    #141b2e 97%);   }
-        body.profile #splash .content, body.story #splash .content {
-          padding: 40px 10px 100px;   }
-          body.profile #splash .content #splash-stats,
-          body.story #splash .content #splash-stats {
-            -webkit-align-items: flex-end;
-            align-items: flex-end;
-            -ms-flex-align: end;
-            flex-align: end;   }
-            body.profile #splash .content #splash-stats .stat .stat-text,
-            body.story #splash .content #splash-stats .stat .stat-text {
-              font-size: 13px;   }
-              body.profile #splash .content #splash-stats .stat .stat-value,
-              body.story #splash .content #splash-stats .stat .stat-value {
-                font-size: 26px;
-                opacity: 1;   }
-          body.profile #splash .content .row-last, body.story #splash .content .row-last {
-            -webkit-flex-direction: column;
-            -moz-flex-direction: column;
-            -ms-flex-direction: column;
-            flex-direction: column;   }
-            body.profile #splash .content .splash-breadcrumb,
-            body.story #splash .content .splash-breadcrumb {
-              display: none;   }
-              body.profile #splash .content .splash-icon-nav,
-              body.story #splash .content .splash-icon-nav {
-                width: 100%;
-                margin-right: 0;
-                margin-top: 3vh;
-                -webkit-justify-content: space-between;
-                -moz-justify-content: space-between;
-                justify-content: space-between;
-                -ms-flex-pack: justify;
-                flex-pack: justify;   }
-                body.profile #splash .content .splash-icon-nav a,
-                body.story #splash .content .splash-icon-nav a {
-                  width: 80px;
-                  padding: 0 5px;
-                  margin: 10px 0;   }
-                  body.profile #splash .content .splash-icon-nav a img,
-                  body.story #splash .content .splash-icon-nav a img {
-                    width: 20px;
-                    height: 20px;   }
-                    body.profile #splash .content .splash-icon-nav a span,
-                    body.story #splash .content .splash-icon-nav a span {
-                      margin-top: 3px;
-                      font-size: 8px;
-                      line-height: 1.3;
-                      overflow-wrap: break-word;
-                      word-wrap: break-word;
-                      -ms-word-break: break-all;
-                      word-break: break-word;
-                      white-space: initial !important;   }
+  body.profile #stats-bar, body.story #stats-bar {
+    height: 0 !important;   }
+    body.profile .expand-stats-btn, body.profile #back-to-top,
+    body.story .expand-stats-btn, body.story #back-to-top {
+      display: none !important;   }
+      body.profile #nav-bar-scroll, body.story #nav-bar-scroll {
+        height: 43px;   }
+        body.profile #profile-nav, body.story #profile-nav {
+          height: 43px;   }
+          body.profile #profile-nav.visible, body.story #profile-nav.visible {
+            top: 0 !important;   }
+            body.profile #profile-nav a, body.story #profile-nav a {
+              min-width: 60px;   }
+              body.profile #profile-nav a li img, body.story #profile-nav a li img {
+                padding: 8px 15px 0;   }
+                body.profile #profile-nav a li .profile-nav-text,
+                body.story #profile-nav a li .profile-nav-text {
+                  display: none;   }
+  body.profile #show-bg i, body.story #show-bg i {
+    padding: 15px 10px;   }
+    body.profile #splash, body.story #splash {
+      width: 100%;   }
+      body.profile #splash #splash-image::after, body.story #splash #splash-image::after {
+        background: -webkit-linear-gradient(top, transparent 10%, rgba(20, 27, 46, 0.7) 60%,
+                #141b2e 97%);   }
+      body.profile #splash .content, body.story #splash .content {
+        padding: 40px 10px 100px;   }
+        body.profile #splash .content #splash-stats,
+        body.story #splash .content #splash-stats {
+          -webkit-align-items: flex-end;
+          align-items: flex-end;
+          -ms-flex-align: end;
+          flex-align: end;   }
+          body.profile #splash .content #splash-stats .stat .stat-text,
+          body.story #splash .content #splash-stats .stat .stat-text {
+            font-size: 13px;   }
+            body.profile #splash .content #splash-stats .stat .stat-value,
+            body.story #splash .content #splash-stats .stat .stat-value {
+              font-size: 26px;
+              opacity: 1;   }
+        body.profile #splash .content .row-last, body.story #splash .content .row-last {
+          -webkit-flex-direction: column;
+          -moz-flex-direction: column;
+          -ms-flex-direction: column;
+          flex-direction: column;   }
+          body.profile #splash .content .splash-breadcrumb,
+          body.story #splash .content .splash-breadcrumb {
+            display: none;   }
+            body.profile #splash .content .splash-icon-nav,
+            body.story #splash .content .splash-icon-nav {
+              width: 100%;
+              margin-right: 0;
+              margin-top: 3vh;
+              -webkit-justify-content: space-between;
+              -moz-justify-content: space-between;
+              justify-content: space-between;
+              -ms-flex-pack: justify;
+              flex-pack: justify;   }
+              body.profile #splash .content .splash-icon-nav a,
+              body.story #splash .content .splash-icon-nav a {
+                width: 80px;
+                padding: 0 5px;
+                margin: 10px 0;   }
+                body.profile #splash .content .splash-icon-nav a img,
+                body.story #splash .content .splash-icon-nav a img {
+                  width: 20px;
+                  height: 20px;   }
+                  body.profile #splash .content .splash-icon-nav a span,
+                  body.story #splash .content .splash-icon-nav a span {
+                    margin-top: 3px;
+                    font-size: 8px;
+                    line-height: 1.3;
+                    overflow-wrap: break-word;
+                    word-wrap: break-word;
+                    -ms-word-break: break-all;
+                    word-break: break-word;
+                    white-space: initial !important;   }
   body.profile .intro .col, body.story .intro .col {
     -webkit-flex-direction: column-reverse;
     -moz-flex-direction: column-reverse;
